# Bankers-Algorithm-Implementation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  embed.sh  mongoose.c
archieve/: CMakeLists.txt  README.md  mongoose.h
archieve/src/: main.c  main_html.h
src/: main.c  main.html
